update:更新Xbatis检测不到xml依赖的告警提示

--- a/resources/inspectionDescriptions/NoSqlMapStatement.html
+++ b/resources/inspectionDescriptions/NoSqlMapStatement.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<p>Write your description here.</p>
+<p>NoSqlMapStatement.</p>
 <!-- tooltip end -->
 <p>Text after this comment will only be shown in the settings of the inspection.</p>
 </body>
