--- a/resources/inspectionDescriptions/NoSqlMapStatement.html
+++ b/resources/inspectionDescriptions/NoSqlMapStatement.html
@@ -1,7 +1,5 @@
 <html>
 <body>
-<p>NoSqlMapStatement.</p>
-<!-- tooltip end -->
-<p>Text after this comment will only be shown in the settings of the inspection.</p>
+<p>No sqlmap statement founded in java psiLiteralExpression.</p>
 </body>
 </html>
