--- a/resources/inspectionDescriptions/NoMapperStatement.html
+++ b/resources/inspectionDescriptions/NoMapperStatement.html
@@ -1,7 +1,5 @@
 <html>
 <body>
-<p>NoMapperStatement.</p>
-<!-- tooltip end -->
-<p>Text after this comment will only be shown in the settings of the inspection.</p>
+<p>No mapper statement founded with Java Method name.</p>
 </body>
 </html>
